--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ title: Joshua Lindsey
 <h2>Blog Posts</h2>
 
 {% for post in site.posts %}
-  <li class="blogpost"><span class="quiet append-1">{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
+  <li class="blogpost"><span class="quiet append-1">{{ post.date | date_to_string }}</span> <a href="/blog/{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 
