--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>Joshua Lindsey</title>
-    <link rel="stylesheet" href="/blog/css/blueprint/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="/blog/css/blueprint/print.css" type="text/css" media="print"> 
+    <link rel="stylesheet" href="/css/blueprint/screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="/css/blueprint/print.css" type="text/css" media="print"> 
     <!--[if lt IE 8]>
-      <link rel="stylesheet" href="/blog/css/blueprint/ie.css" type="text/css" media="screen, projection">
+      <link rel="stylesheet" href="/css/blueprint/ie.css" type="text/css" media="screen, projection">
     <![endif]-->
-    <link rel="stylesheet" href="/blog/css/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="/blog/css/syntax.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen, projection">
     <meta http-equiv="content-type" content="text/html;charset=UTF-8">
   </head>
 
@@ -18,14 +18,14 @@
         <h2>Blog Posts</h2>
 
 
-  <li class="blogpost"><span class="quiet append-1">14 Apr 2011</span> <a href="/blog//2011-04-14/chef-and-aws-who-loves-plumbing">Chef and AWS, who loves plumbing?</a></li>
+  <li class="blogpost"><span class="quiet append-1">14 Apr 2011</span> <a href="/2011-04-14/chef-and-aws-who-loves-plumbing">Chef and AWS, who loves plumbing?</a></li>
 
 
 
       </div>
 
       <div class="span-5 sidebar last">
-        <h3><a href="/" class="backlink">Joshua Lindsey</a></h3>
+        <h3><a href="http://joshualindsey.net/" class="backlink">Joshua Lindsey</a></h3>
         <a href="https://github.com/jlindsey" class="quiet sidebar-link">GitHub</a><br class="clear">
         <a href="https://twitter.com/lesmothian" class="quiet sidebar-link">Twitter</a><br class="clear">
         <a href="http://www.linkedin.com/pub/josh-lindsey/12/675/33" class="quiet sidebar-link">LinkedIn</a><br class="clear">
